# LangGraph-Compare

./: .buildinfo  .env  README.md  Statistics_Testing.ipynb  Testing_PM4PM.ipynb  advanced_examples.html  analysis.py  csv_skip_test.py  csv_test.py  genindex.html  getting_started.html  index.html  langgraph_compare.html  langgraph_log_parser.html  log_to_csv.py  log_to_csv_skip.py  main.py  main_collaboration.py  main_hierarchical_teams.py  main_network.py  main_supervision.py  main_supervison.py  main_tavily.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  sample.py  search.html  searchindex.js  sql_to_log.py  tee.py  test.ipynb  viz_test.py
.github/workflows/: documentation.yml
_modules/: index.html
_modules/langgraph_compare/: analyze.html  analyze_case_id.html  artifacts.html  create_html.html  create_report.html  experiment.html  graph_runner.html  jsons_to_csv.html  load_events.html  sql_to_jsons.html  visualize.html
_modules/langgraph_log_parser/: analyze.html  analyze_case_id.html  artifacts.html  create_html.html  create_report.html  experiment.html  graph_runner.html  jsons_to_csv.html  load_events.html  sql_to_jsons.html  visualize.html
_sources/: advanced_examples.rst.txt  getting_started.rst.txt  index.rst.txt  langgraph_log_parser.rst.txt
docs/: advanced_examples.rst  analysis.rst  conf.py  getting_started.rst  graph_runner.rst  index.rst  langgraph_compare.rst  langgraph_log_parser.rst  log_to_csv.rst  modules.rst  requirements.txt  sql_to_log.rst  visualize.rst
docs/_build/doctrees/: environment.pickle  index.doctree  langgraph_log_parser.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  langgraph_log_parser.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
examples/architectures/: main.py  main_hierarchical_teams.py  main_network.py  main_supervision.py  main_tavily.py
examples/compare_arch/: compare.py  event.py  linear.py  random.py  randomly.py  supervise.py
examples/reflexion/: code.py  compare.py  math.py  reflexion.py  research.py
files/: examples.csv
files/tests/: test_csv_output.csv
langgraph_compare/: __init__.py  analyze.py  analyze_case_id.py  create_html.py  create_report.py  graph_runner.py  load_events.py
langgraph_log_parser/: __init__.py  analysis.py  analyze.py  analyze_case_id.py  artifacts.py  create_experiment.py  create_html.py  create_html_case_id.py  create_report.py  create_report_case_id.py  create_structure.py  experiment.py  graph_runner.py  jsons_to_csv.py  load_events.py  log_to_csv.py  sql_to_jsons.py  sql_to_log.py  visualize.py
langgraph_log_parser/templates/: comparison_report.html
langgraph_log_parser/templates/components/: metrics.html  modal.html  scripts.html  sequences.html  styles.html  visualizations.html
old/: old_main.py  test.py
tests/: conftest.py  test_analysis.py  test_analyze.py  test_analyze_case_id.py  test_artifacts.py  test_create_html.py  test_create_report.py  test_experiment.py  test_graph_runner.py  test_jsons_to_csv.py  test_log_to_csv.py  test_sql_to_jsons.py  test_sql_to_log.py  test_visualize.py
tests/files/: files.html
tests/files/csv/: csv_output.csv
tests/files/db/: files.sqlite  hierarchical.sqlite
tests/files/json/: thread_1.json  thread_2.json  thread_3.json
tests/files/jsons/: thread_1.json  thread_2.json  thread_3.json
tests/files/reports/: metrics_report.json  sequences_report.json
(+3 files in other folders)
