# Check poetry location by:
# Unix - which poetry
# Windows - where poetry

# Before running tests:
# Be sure to: "poetry install --with test" before running "poetry run pytest"

[tool.poetry]
name = "langgraph_log_parser"
version = "0.1.3"
description = "Parser for logs from LangGraph"
authors = ["Tomasz Serafiński <tomasz@serafinski.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
langgraph = "^0.2.45"
langsmith = "^0.1.142"
langchain-openai = "^0.2.6"
langchain = "^0.3.7"
langchain-community = "^0.3.5"
langgraph-checkpoint-sqlite = "^2.0.1"
pandas = "^2.2.3"
pm4py = "^2.7.12.1"
tavily-python = "^0.5.0"
msgpack = "^1.1.0"
langchain-experimental = "^0.3.3"
matplotlib = "^3.9.2"
langchain-core = "^0.3.15"
pydantic = "^2.9.2"
prefixspan = "^0.5.2"
pyvis = "^0.3.2"
numpy = "<2.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"


[tool.poetry.group.doc.dependencies]
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
